<resources>
    <string name="app_name">BILBASEN Mini</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="search">Søg</string>
    <string name="show_vehicles_all">Alle</string>
    <string name="show_vehicles_new">Nye</string>
    <string name="show_vehicles_used">Brugte</string>
    <string name="vehicle_type">Kategori</string>
    <string name="make">Mærke</string>
    <string name="model">Model</string>
    <string name="price">Pris</string>
    <string name="year">Årgang</string>
    <string name="fuel">Brændstof</string>
    <string name="further">Flere valgmuligheder</string>
    <string name="fortryd">Fortryd</string>
    <string name="km_driven">Kilometer</string>
    <string name="vehicle_type_car">Personbil</string>
    <string name="vehicle_type_van">Varebil</string>
    <string name="vehicle_type_bus">Bus</string>
    <string name="vehicle_type_truck">Lastbil</string>
    <string name="vehicle_type_autocamper">Autocamper</string>
    <string name="from">Fra:</string>
    <string name="to">Til:</string>
    <string name="ok">OK</string>
    <string name="cancel">Fortryd</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
